--- a/templates/cadastrar_cliente.html
+++ b/templates/cadastrar_cliente.html
@@ -32,6 +32,12 @@
                 <input class="form-check-input" type="checkbox" name="mostrar_saldo" id="mostrar_saldo" checked>
                 <label class="form-check-label" for="mostrar_saldo">
                     Mostrar Saldo Acumulado no Relatório
+                </label>                
+            </div>
+            <div class="form-check mt-2">
+                <input class="form-check-input" type="checkbox" id="consumo_instantaneo" name="consumo_instantaneo">
+                <label class="form-check-label" for="consumo_instantaneo">
+                    Cliente com Consumo Instantâneo
                 </label>
             </div>
             <div class="col-md-6">
