--- a/templates/editar_cliente.html
+++ b/templates/editar_cliente.html
@@ -40,6 +40,13 @@
                         Mostrar Saldo Acumulado no Relatório
                     </label>
                 </div>
+                <div class="form-check mt-2">
+                    <input class="form-check-input" type="checkbox" name="consumo_instantaneo" id="consumo_instantaneo"
+                        {% if cliente.consumo_instantaneo %}checked{% endif %}>
+                    <label class="form-check-label" for="consumo_instantaneo">
+                        Cliente com Consumo Instantâneo
+                    </label>
+                </div>
                 <div class="col-md-6">
                     <label for="endereco" class="form-label">Endereço</label>
                     <input type="text" class="form-control" id="endereco" name="endereco" value="{{ cliente.endereco }}" required>
