--- a/templates/registrar_despesa.html
+++ b/templates/registrar_despesa.html
@@ -47,7 +47,7 @@
         <div class="row">
             <div class="col-md-4 mb-3">
                 <label class="form-label">Data</label>
-                <input type="date" name="data" class="form-control" required>
+                <input type="date" name="data" class="form-control" required value="{{ data_hoje }}" readonly>
             </div>
             <div class="col-md-4 mb-3">
                 <label class="form-label">Mês de Referência</label>
