--- a/templates/index.html
+++ b/templates/index.html
@@ -92,6 +92,9 @@
                         <div class="col-md-4">
                             <a href="{{ url_for('faturamento') }}" class="btn btn-outline-primary w-100">Faturamento</a>
                         </div>
+                        <div class="col-md-4">
+                            <a href="{{ url_for('baixar_fatura') }}" class="btn btn-outline-primary w-100">Baixar Fatura</a>
+                        </div>
                     </div>
                 </div>
             </div>
