Atualização no em baixar fatura

--- a/templates/producao_mensal.html
+++ b/templates/producao_mensal.html
@@ -120,6 +120,8 @@
         </div>
     </div>
 
+    <div class="mt-4"></div>
+
     <!-- Desvio e Tendência -->
     <div class="row mb-4 fade-in" style="animation-delay: 0.8s;">
         <div class="col-md-12">
