--- a/templates/index.html
+++ b/templates/index.html
@@ -120,8 +120,7 @@
                     <div class="row g-3">
                         <div class="col-md-4">
                             <a href="{{ url_for('financeiro') }}" class="btn btn-outline-primary w-100">Balancete</a>
-                        </div>
-                      
+                        </div>                      
                         <div class="col-md-4">
                             <a href="{{ url_for('registrar_despesa') }}" class="btn btn-outline-primary w-100">Cadastrar Despesas</a>
                         </div>
@@ -130,6 +129,9 @@
                         </div>
                         <div class="col-md-4">
                             <a href="{{ url_for('upload_boleto') }}" class="btn btn-outline-primary w-100">Upload de Boletos</a>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="{{ url_for('cadastrar_credor') }}" class="btn btn-outline-primary w-100">Cadastrar Credor</a>
                         </div>
                     </div>
                 </div>
