Ajuste no relatório consolidado

--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
                 <div class="accordion-body">
                     <div class="row g-3">
                         <div class="col-md-4">
-                            <a href="{{ url_for('financeiro') }}" class="btn btn-outline-primary w-100">Balancete</a>
+                            <a href="{{ url_for('financeiro') }}" class="btn btn-outline-primary w-100">Caixas e Bancos</a>
                         </div>                      
                         <div class="col-md-4">
                             <a href="{{ url_for('registrar_despesa') }}" class="btn btn-outline-primary w-100">Cadastrar Despesas</a>
