--- a/templates/registrar_despesa.html
+++ b/templates/registrar_despesa.html
@@ -13,7 +13,7 @@
         <div class="alert alert-info text-center">{{ mensagem }}</div>
     {% endif %}
 
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         <div class="mb-3">
             <label class="form-label">Usina</label>
             <select name="usina_id" class="form-select" required>
@@ -66,6 +66,10 @@
                 <option value="{{ credor.id }}">{{ credor.nome }}</option>
                 {% endfor %}
             </select>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Documento Comprovante (PDF, JPG, PNG)</label>
+            <input type="file" name="arquivo" class="form-control" accept=".pdf,.jpg,.jpeg,.png">
         </div>
 
         <div class="text-center">
